# LearningDataEngineering

./: .gitignore  config.yaml  pyproject.toml
dags/: dag.py
etl_pipeline/: load.py
tests/: invalid_config.yaml  test_config.py  test_extract.py  test_load.py  test_transform.py
utils/: cleanup.py  config.py  extract.py  transform.py
